LU-8091 mount: error out properly in server_lsi2mti()

server_lsi2mti() should return an error if no proper NID is
initialized, otherwise, target will register successfully with
an invalid empty NID.

Signed-off-by: Niu Yawei <yawei.niu@intel.com>
Change-Id: Ia5fd78e4df6344764109486ce1082099054ebf1e
Reviewed-on: http://review.whamcloud.com/19933
Tested-by: Jenkins
Reviewed-by: Bobi Jam <bobijam@hotmail.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>